microservices-auth-project/k8s/mongodb-deployment.yaml
# MONGODB DEPLOYMENT
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: microservices-auth
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:6.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: microservices-auth
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
