microservices-auth-project/k8s/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: microservices-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: order-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 6000
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: microservices-auth
spec:
  selector:
    app: order-service
  ports:
  - port: 6000
    targetPort: 6000
